@@ -98,14 +98,19 @@ i.e. the node ID of the node sending the message, to maintain the structure of t
 network.</p>
 <p>The <tt class="docutils literal">token</tt> field also has the same semantics as the standard DHT message <tt class="docutils literal">get_peers</tt>
 and <tt class="docutils literal">announce_peer</tt>, when requesting an item and to write an item respectively.</p>
+<p>The <tt class="docutils literal">k</tt> field is the PKCS#1 encoded 2048 bit RSA public key, which the signature
+can be authenticated with. When looking up a mutable item, the <tt class="docutils literal">target</tt> field
+MUST be the SHA-1 hash of this key.</p>
 <p>The distinction between storing mutable and immutable items is the inclusion
-of a public key, a sequence number and signature (<tt class="docutils literal">k</tt>, <tt class="docutils literal">seq</tt> and <tt class="docutils literal">sig</tt>).
-The distinction betwewn retrieving a mutable and immutable item is the inclusion of
-the public key spill-over (<tt class="docutils literal">k</tt>) in the <tt class="docutils literal">get</tt> request.</p>
-<p>The <tt class="docutils literal">v</tt> key is the <em>value</em> to be stored. It is allowed to be any bencoded type (list,
+of a public key, a sequence number and signature (<tt class="docutils literal">k</tt>, <tt class="docutils literal">seq</tt> and <tt class="docutils literal">sig</tt>).</p>
+<p><tt class="docutils literal">get</tt> requests for mutable items and immutable items cannot be distinguished from
+eachother. An implementation can either store mutable and immutable items in the same
+hash table internally, or in separate ones and potentially do two lookups for <tt class="docutils literal">get</tt>
+requests.</p>
+<p>The <tt class="docutils literal">v</tt> field is the <em>value</em> to be stored. It is allowed to be any bencoded type (list,
 dict, string or integer). When it's being hashed (for verifying its signature or to calculate
 its key), its flattened, bencoded, form is used.</p>
-<p>Storing nodes are SHOULD reject <tt class="docutils literal">put</tt> requests where the bencoded form of <tt class="docutils literal">v</tt> is longer
+<p>Storing nodes SHOULD reject <tt class="docutils literal">put</tt> requests where the bencoded form of <tt class="docutils literal">v</tt> is longer
 than 767 bytes.</p>
 </div>
 <div class="section" id="immutable-items">
@@ -172,7 +177,8 @@ there is no need to authenticate the origin of them. This makes immutable items 
 <h1>mutable items</h1>
 <p>Mutable items can be updated, without changing their DHT keys. To authenticate
 that only the original publisher can update an item, it is signed by a private key
-generated by the original publisher.</p>
+generated by the original publisher. The target ID mutable items are stored under
+is the SHA-1 hash of the public key (as it appears in the <tt class="docutils literal">put</tt> message).</p>
 <p>In order to avoid a malicious node to overwrite the list head with an old
 version, the sequence number <tt class="docutils literal">seq</tt> must be monotonically increasing for each update,
 and a node hosting the list node MUST not downgrade a list head from a higher sequence
@@ -187,7 +193,7 @@ number and <tt class="docutils literal">v</tt> key. e.g. something like this:: <
         &quot;a&quot;:
         {
                 &quot;id&quot;: <em>&lt;20 byte id of sending node (string)&gt;</em>,
-                &quot;k&quot;: <em>&lt;RSA-2048 public key (268 bytes string)&gt;</em>,
+                &quot;k&quot;: <em>&lt;RSA-2048 public key (PKCS#1 encoded)&gt;</em>,
                 &quot;seq&quot;: <em>&lt;monotonically increasing sequence number (integer)&gt;</em>,
                 &quot;sig&quot;: <em>&lt;RSA-2048 signature (256 bytes string)&gt;</em>,
                 &quot;token&quot;: <em>&lt;write-token (string)&gt;</em>,
@@ -217,8 +223,7 @@ stored on the node, MUST reject the request.</p>
         &quot;a&quot;:
         {
                 &quot;id&quot;: <em>&lt;20 byte id of sending node (string)&gt;</em>,
-                &quot;target:&quot; <em>&lt;first 20 bytes of public key (string)&gt;</em>,
-                &quot;k&quot;: <em>&lt;remaining 248 bytes of public key (string)&gt;</em>
+                &quot;target:&quot; <em>&lt;20 byte SHA-1 hash of public key (string)&gt;</em>
         },
         &quot;t&quot;: <em>&lt;transaction-id (string)&gt;</em>,
         &quot;y&quot;: &quot;q&quot;,
@@ -259,6 +264,11 @@ verification failure if a bencoding serializer alters the order of entries in th
 <li>hash the concatenated string with SHA-1</li>
 <li>sign or verify the hash digest.</li>
 </ol>
+<p>On the storage node, the signature MUST be verified before accepting the store command. The data
+MUST be stored under the SHA-1 hash of the public key (as it appears in the bencoded dict).</p>
+<p>On the subscribing nodes, the key they get back from a <tt class="docutils literal">get</tt> request MUST be verified to hash
+to the target ID the lookup was made for, as well as verifying the signature. If any of these fail,
+the response SHOULD be considered invalid.</p>
 </div>
 <div class="section" id="expiration">
 <h1>expiration</h1>
